name:                sample-mongodb
version:             0.1.0.0
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , mongoDB
  default-language:    Haskell2010

executable sample-mongodb-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sample-mongodb
  default-language:    Haskell2010
