
name:                sqlite-sample
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable sqlite-sample
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       persistent-sqlite >= 2.2,
                       persistent-template >= 2.1,
                       transformers

  default-language:    Haskell2010