[project]
name = "txt2img_cuda"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers",
    "torch>=2.10.0",
    "transformers",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
