[package]
name = "tide_mongo_sample_id"
version = "0.1.0"
edition = "2018"

[dependencies]
juniper = "0.15"
mongodb = { version = "1.1", default-features = false, features = ["async-std-runtime"] }
bson = "1.1"
tide = "0.16"
async-std = { version = "1.9", features = ["attributes"] }
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
