[package]
name = "jetstream_sample"
version = "0.1.0"
edition = "2021"
default-run = "publisher"

[dependencies]
tokio = { version = "1.23", features = ["full"] }
tokio-stream = "0.1"
async-nats = "0.24"

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[[bin]]
name = "subscriber"
path = "src/subscriber.rs"
