[package]
name = "sample"
version = "0.1.0"
edition = "2018"
default-run = "sample-server"

[dependencies]
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.2"

[[bin]]
name = "sample-server"
path = "src/server.rs"

[[bin]]
name = "sample-client"
path = "src/client.rs"
