[package]
name = "cargo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.23", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
juniper = { git = "https://github.com/graphql-rust/juniper", features = ["chrono"] }
mongodb = "2.3"
uuid = { version = "1", features = ["serde", "v4"] }
